syntax = "proto3";
package m2g.pb;

enum GroupType {
  NO_GROUP = 0;
}
